--- a/minor/vercel.json
+++ b/minor/vercel.json
@@ -8,5 +8,11 @@
   ],
   "routes": [
     { "src": "/(.*)", "dest": "minor/$1" }
+  ],
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
+
+
+
 }
